src/test/Properties3/Properties3.expected
error: Properties3.panda:8:14: inherited function x():panda.core.Int32 (defined at Properties3.panda:2:5) is not abstract and may not be overridden by a property getter
1 error
