src/test/Properties3/Properties3.panda
class Super {
    function x():Int {
        return 12
    }
}

class Sub : Super {
    property x:Int
}